Fri Oct 12 14:58:15 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/URL.cc (removeIndex): Fixed to make sure the matched file
	name is at the end of the URL.

Tue Oct  2 09:34:43 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html (start_url): Added a reference and link to
	limit_urls_to, explaining how the two are tied together.

Fri Sep 28 17:19:45 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/htdig-3.1.6.spec: Fixed %install to make symlinks for
	htdump & htload, added these to %files list.

Fri Sep 28 15:38:00 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (displayMatch): Save rewritten URL in DocumentRef
	so it'll be used for star_patterns and template_patterns matching.

Fri Sep 28 14:25:29 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (buildMatchList, displayMatch),
	htsearch/htsearch.cc (main): Added calls to pass search_rewrite_rules
	to HtURLRewriter class and use it to rewrite URLs in results.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html,
	htcommon/defaults.cc: Added search_rewrite_rules attribute.

Thu Sep 27 16:34:51 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Makefile.in, htlib/HtRegex.cc, htlib/HtRegex.h,
	htlib/HtRegexReplace.cc, htlib/HtRegexReplace.h,
	htlib/HtRegexReplaceList.cc, htlib/HtRegexReplaceList.h,
	htlib/HtURLRewriter.cc, htlib/HtURLRewriter.h: Added new classes to
	support regular expressions and implement url_rewrite_rules attribute,
	using Geoff's variation of Andy Armstrong's implementation of this.

	* htlib/URL.h, htlib/URL.cc: Added URL::rewrite() method.

	* htlib/htString.h: Added Nth() method for HtRegex class.

	* htdig/Retriever.cc (got_href, got_redirect): Added calls to
	url.rewrite(), and debugging output for this.

	* htdig/htdig.cc (main): Added calls to make instance of
	HtURLRewriter class.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html,