@@ -928,6 +928,8 @@
 		  </dt>
 		  <dd>
 			<a href="htdig.html">htdig</a>,
+			<a href="htdump.html">htdump</a>,
+			<a href="htload.html">htload</a>,
 			<a href="htnotify.html">htnotify</a>,
 			<a href="htmerge.html">htmerge</a> and
 			<a href="htsearch.html" target="_top">htsearch</a>
@@ -1180,6 +1182,8 @@
 		  </dt>
 		  <dd>
 			<a href="htdig.html">htdig</a>,
+			<a href="htdump.html">htdump</a>,
+			<a href="htload.html">htload</a>,
 			<a href="htnotify.html">htnotify</a>, <a href="htfuzzy.html">
 			htfuzzy</a>, <a href="htmerge.html">htmerge</a> and <a
 			href="htsearch.html" target="_top">htsearch</a>
@@ -1227,6 +1231,8 @@
 		  </dt>
 		  <dd>
 			<a href="htdig.html">htdig</a>,
+			<a href="htdump.html">htdump</a>,
+			<a href="htload.html">htload</a>,
 			<a href="htnotify.html">htnotify</a>,
 			<a href="htfuzzy.html">htfuzzy</a>,
 			<a href="htmerge.html">htmerge</a> and
@@ -1421,9 +1427,11 @@
 			<em>used by:</em>
 		  </dt>
 		  <dd>
-			<a href="htdig.html">htdig</a>, <a href="htmerge.html">
-			htmerge</a> and <a href="htsearch.html" target="_top">
-			htsearch</a>,
+			<a href="htdig.html">htdig</a>,
+			<a href="htdump.html">htdump</a>,
+			<a href="htload.html">htload</a>,
+			<a href="htmerge.html">htmerge</a> and
+			<a href="htsearch.html" target="_top">htsearch</a>,
 		  </dd>
 		  <dt>
 			<em>default:</em>
@@ -3003,6 +3011,8 @@
 		  </dt>
 		  <dd>
 			<a href="htdig.html">htdig</a>,
+			<a href="htdump.html">htdump</a>,
+			<a href="htload.html">htload</a>,
 			<a href="htnotify.html">htnotify</a>,
 			<a href="htfuzzy.html">htfuzzy</a>,
 			<a href="htmerge.html">htmerge</a> and
@@ -7649,6 +7659,8 @@
 		  </dt>
 		  <dd>
 			<a href="htdig.html">htdig</a>,
+			<a href="htdump.html">htdump</a>,
+			<a href="htload.html">htload</a>,
 			<a href="htnotify.html">htnotify</a>,
 			<a href="htmerge.html">htmerge</a> and <a
 			href="htsearch.html" target="_top">htsearch</a>
@@ -7794,6 +7806,8 @@
 		  </dt>
 		  <dd>
 			<a href="htdig.html">htdig</a>,
+			<a href="htdump.html">htdump</a>,
+			<a href="htload.html">htload</a>,
 			<a href="htnotify.html">htnotify</a>,
 			<a href="htmerge.html">htmerge</a> and <a
 			href="htsearch.html" target="_top">htsearch</a>
@@ -8365,7 +8379,7 @@
 	</dl>
 	<hr size="4" noshade>
 <!-- hhmts start -->
-Last modified: $Date: 2001/10/02 14:35:23 $
+Last modified: $Date: 2001/10/15 02:20:23 $
 <!-- hhmts end -->
   </body>
 </html>
