@@ -26,6 +26,8 @@
 	<b>Reference</b> <font face="helvetica,arial" size="2"><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a href="rundig.html" target="body">rundig</a><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a href="htdig.html" target="body">htdig</a><br>
+	  <img src="dot.gif" alt="*" width=9 height=9> <a href="htdump.html" target="body">htdump</a><br>
+	  <img src="dot.gif" alt="*" width=9 height=9> <a href="htload.html" target="body">htload</a><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a href="htmerge.html" target="body">htmerge</a><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a href="htnotify.html" target="body">htnotify</a><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a href="htfuzzy.html" target="body">htfuzzy</a><br>
